[package]
name = "nebula"
version = "0.0.1"
authors = ["Michael Bryant <shadow53@shadow53.com>"]
edition = "2018"
description = "A form handling server written in Rust"
homepage = "https://bluestnight.com/products/nebula-forms/"
repository = "https://gitlab.com/BluestNight/nebula-rs"
readme = "README.md"
keywords = ["forms", "server"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = [ "email" ]
# Feature for sending emails based on form content.
#email = [ "nebula_email" ]

[dependencies]
warp = "0.2.0"
log = "0.4.8"
#nebula_email = { path = "../nebula_email", version = "0.1.0", optional = true }
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5.5"
