[package]
name = "nebula_email"
version = "0.0.1"
authors = ["Michael Bryant <shadow53@shadow53.com>"]
edition = "2018"
description = "Email handler for nebula form-handling server"
documentation = "https://docs.rs/nebula_email/"
homepage = "https://bluestnight.com/docs/nebula-forms/users/plugins/email/"
repository = "https://gitlab.com/BluestNight/nebula"
readme = "README.md"
keywords = ["nebula", "forms", "http", "email", "contact"]
categories = ["email", "web-programming::http-server"]
license = "MPL-2.0"
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9.2"
lettre_email = "0.9.2"
serde = { version = "1.0", features = [ "derive" ] }
tera = "1.0.1"
tokio = { version = "0.2", features = [ "sync" ] }
toml = "0.5"
