[package]
name = "nebula_form"
version = "0.1.5"
authors = ["Michael Bryant <shadow53@shadow53.com>"]
edition = "2018"
description = "General form"
documentation = "https://docs.rs/nebula_email/"
homepage = "https://bluestnight.com/docs/nebula-forms/users/plugins/email/"
repository = "https://gitlab.com/BluestNight/nebula"
readme = "README.md"
keywords = ["nebula", "forms", "http", "email", "contact"]
categories = ["email", "web-programming::http-server"]
license = "MPL-2.0"
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server-warp = [ "warp", "nebula_status/server-warp" ]

[dependencies]
bytes = "0.5"
futures = "0.3"
nebula_status = { version = "0.1", path = "../nebula_status", optional = true }
urlencoding = "1.0.0"
warp = { version = "0.2", optional = true }
