[package]
name = "nebula_rpc"
version = "0.1.0"
authors = ["Michael Bryant <shadow53@shadow53.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-ports = []

[dependencies]
async-trait = "0.1"
bytes = "0.5"
http = "0.2"
nebula_form = { version = "0.1", path = "../nebula_form" }
nebula_status = { version = "0.3" , path = "../nebula_status" }
nix = "0.18"
prost = "0.6"
prost-types = "0.6"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tonic = "0.3"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"
