[package]
name = "nebula_handler_validate"
version = "0.1.0"
authors = ["Michael Bryant <shadow53@shadow53.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
lazy_static = "1.4"
nebula_form = { version = "0.1", path = "../../nebula_form" }
nebula_rpc = { version = "0.1", path = "../../nebula_rpc" }
ordered-float = "2"
regex = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
